<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.InsertActivity"
    android:layout_margin="20dp"
    android:animateLayoutChanges="true">

    <TextView
        android:id="@+id/customerDetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/customerDetail"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/customerId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/customerId"
        app:layout_constraintTop_toBottomOf="@+id/customerDetail"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/customerName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/customerName"
        app:layout_constraintTop_toBottomOf="@+id/customerId"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/customerAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/customerAddress"
        app:layout_constraintTop_toBottomOf="@+id/customerName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/customerPhoneNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/customerPhoneNumber"
        app:layout_constraintTop_toBottomOf="@+id/customerAddress"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/customerEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/customerEmail"
        app:layout_constraintTop_toBottomOf="@+id/customerPhoneNumber"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/btnClear"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="clear"
        android:text="@string/clear"
        android:textAllCaps="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customerEmail" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/add"
        android:textAllCaps="false"
        android:onClick="insertCustomer"
        app:layout_constraintHorizontal_weight="0.5"
        app:layout_constraintLeft_toRightOf="@+id/btnClear"
        app:layout_constraintTop_toBottomOf="@+id/customerEmail" />

</android.support.constraint.ConstraintLayout>